# conf

./: .clang-format  .gitlab-ci.yml  .pkg  CMakeLists.txt  README.md
.github/workflows/: linux.yml  unix.yml  windows.yml
example/: main.cc
include/conf/: configuration.h  date_time.h  duration.h  holder.h  options_parser.h  simple_config.h  simple_config_param.h
src/: configuration.cc  date_time.cc  duration.cc  options_parser.cc  simple_config.cc
test/: configuration_test.cc  duration_parser_test.cc  time_parser_test.cc
